# forecastops-mlforecast

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
artifacts/models/: fitted_values.parquet
artifacts/models/mlforecast_model/: ts.pkl
artifacts/reports/: run_summary.json
docker/: backend.Dockerfile  entrypoint.sh  frontend.Dockerfile  nginx.conf
docs/: DATA_ENGINEERING.md  MLFORECAST_FEATURE_COVERAGE.md
frontend/angular-ui/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
notebooks/: 01_data_engineering.ipynb  02_ml_pipeline_mlforecast.ipynb
notebooks/data/processed/: market_training.parquet
notebooks/data/raw/: market_raw.parquet
scripts/: download_all_data.py  run_api.sh  run_full_pipeline.py  run_pipeline.py
scripts/artifacts/reports/: cv_summary.parquet  pipeline_report.json
src/mlforecast_realworld/: __init__.py  cli.py  config.py  logging_config.py
src/mlforecast_realworld/api/: __init__.py  background_tasks.py  main.py  service.py
src/mlforecast_realworld/data/: __init__.py  downloader.py  engineering.py  sp500.py
src/mlforecast_realworld/ml/: __init__.py  evaluation.py  factory.py  pipeline.py
src/mlforecast_realworld/schemas/: __init__.py  records.py
tests/: conftest.py  test_cli.py  test_config.py  test_downloader.py  test_engineering.py  test_evaluation.py  test_factory.py  test_integration.py  test_pipeline.py  test_records.py  test_service_api.py  test_utils_io.py
(+12 files in other folders)
